Update complete restaurant website copy.css

--- a/complete restaurant website copy.css
+++ b/complete restaurant website copy.css
@@ -21,12 +21,12 @@
 }
 
 .food-munch-logo{
-    width: 90px;
-    height: 90px;
+    width: 80px;
+    height: 70px;
 }
 
 .banner-section-bg-container{
-    background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20200808/pngtree-orange-gradient-ganesha-background-image_388775.jpg");
+    background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/foodmunch-banner-bg.png");
     background-size: cover;
     height: 100vh;
 }
@@ -45,11 +45,11 @@
     font-size: 24px;
 }
 
-.bg-custom-button{
+.custom-button{
     width: 130px;
     height: 45px;
     color: white;
-    background-color: #f19d16;
+    background-color: #d0b200;
     border-radius: 8px;
     border-width: 0;
     margin-right: 10px;
@@ -58,11 +58,11 @@
 .custom-outline-button{
     width: 130px;
     height: 45px;
-    color: black;
+    color: #d0b200;
     background-color: transparent;
     border-width: 1px;
     border-style: solid;
-    border-color: white;
+    border-color: #d0b200;
     border-radius: 8px; 
 }
 
@@ -140,7 +140,7 @@
 }
 
 .menu-item-link{
-    color: #f19d16;
+    color: #d0b200;
     font-family: "Roboto";
     font-weight: 500;
     font-size: 14px;
@@ -169,7 +169,7 @@
   }
   .custom-button {
     color: white;
-    background-color: #f19d16;
+    background-color: #d0b200;
     width: 130px;
     height: 45px;
     border-width: 0;
@@ -229,7 +229,7 @@
     }
     .custom-button {
       color: white;
-      background-color: #f19d16;
+      background-image: linear-gradient(#d0b200,#a58d00);
       width: 130px;
       height: 45px;
       border-width: 0;
@@ -250,7 +250,7 @@
       }
       
       .icon{
-          color: #f19d16;
+          color: #d0b200;
           font-size: 35px;
       }
       
@@ -262,5 +262,14 @@
           margin: 15px;
           border-radius: 40px;
       }
+
+
+
+
+
+
+
+
+
 
      
